--- a/package.json
+++ b/package.json
@@ -1,15 +1,36 @@
 {
-  "name": "curzy",
+  "name": "@uniteds/curzy",
+  "version": "1.0.0",
   "module": "src/index.ts",
   "type": "module",
+  "publishConfig": {
+    "access": "public"
+  },
+  "scripts": {
+    "build": "tsup"
+  },
   "devDependencies": {
     "@types/bun": "latest",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "tsup": "^8.2.3"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
-  "dependencies": {
-    "discord.js": "^14.15.3"
-  }
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      },
+      "require": {
+        "types": "./dist/index.d.cts",
+        "default": "./dist/index.cjs"
+      }
+    }
+  },
+  "files": [
+    "dist/**/*"
+  ],
+  "types": "dist/index.d.ts"
 }
