--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/node": "^22.0.2",
     "dotenv": "^16.4.5",
     "tsup": "^8.2.3"
   },
