--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "tsup"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.8.3",
+    "@ryuux/config": "^1.0.1",
     "@types/bun": "latest",
     "@types/node": "^22.0.2",
     "dotenv": "^16.4.5",
