--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "lint": "biome lint --write src/*.ts",
-    "fmt": "pnpm biome format --write src/*.ts",
+    "fmt": "biome format --write src/*.ts",
     "build": "tsup"
   },
   "devDependencies": {
