:pencil2: fix: rename branch `master` to `main`

--- a/biome.json
+++ b/biome.json
@@ -37,6 +37,6 @@
     "enabled": true,
     "clientKind": "git",
     "useIgnoreFile": true,
-    "defaultBranch": "master"
+    "defaultBranch": "main"
   }
 }
