:green_heart: ci: add permissions to release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,10 @@ on:
       - main
       - next
       - rc
-
+permissions:
+      contents: read
+      pages: write
+      id-token: write
 jobs:
   release:
     name: Release
